# nana-player

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: build.yml
vcpkg/ports/nana/: CMakeLists.txt  portfile.cmake  vcpkg.json
